# Utrecht

./: .gitignore  LICENSE  Utrecht.cabal
src/Utrecht/Mastermind/: Core.hs  Main.hs
test/: Test.hs
test/Utrecht/MasterMind/: Test.hs
