name:                utrecht
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Kristoffer Just Andersen
maintainer:          kristoffer.andersen@icloud.com
build-type:          Simple
extra-source-files:  README.md

cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base == 4.*, random == 1.*

executable MasterMind
  -- .hs or .lhs file containing the Main module.
  main-is:             Utrecht/MasterMind/Main.hs
  ghc-options:         -Wall  
  build-depends:       base == 4.*, random == 1.*
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite Tests-MasterMind
  main-is:          Test.hs
  hs-source-dirs:   test src
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  build-depends:    base == 4.*,
                    random == 1.*,
                    HUnit,
                    QuickCheck,
                    smallcheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    tasty-smallcheck